--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
-}
+*{margin:0px;padding:0px;}
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,300;0,400;1,100;1,200;1,300&family=Doto:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nanum+Gothic&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+body{ font-family: "Nanum Gothic", sans-serif;}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.headerWrapper .header{width: 100%;height: auto;padding: 25px 25px;}
+.logoWrapper img{width: 20%;}
 
-.App-link {
-  color: #61dafb;
-}
+.headerWrapper .headerSearch{position: absolute;left: 25%;top: 6%;}
+.headerWrapper  .headerSearch input{width: 235%; height: 30px;border-radius: 6px;outline: none;margin: 0px;font-size: 16px !important;padding: 0 35px;}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.headerSearch button{position: absolute;top: -4px;left: -30px;z-index: 100;min-width:60px;height: 40px;width: 100px;border-radius: 50%;color: black;}
+.headerSearch button{font-size: 20px}
